# multi-turn-regress-aaaa-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: OUTLINE.md  main.aux  main.bbl  main.blg  main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: mtbench_results.tex  safety_results.tex
paper_search_results/: multi-turn_conversation_LLM_alignment_decay_20260215_161305.jsonl
papers/: README.md
papers/pages/intent_mismatch/: 2602.07338_intent_mismatch_multi_turn_chunk_001.txt  2602.07338_intent_mismatch_multi_turn_chunk_002.txt  2602.07338_intent_mismatch_multi_turn_chunk_003.txt  2602.07338_intent_mismatch_multi_turn_chunk_004.txt  2602.07338_intent_mismatch_multi_turn_manifest.txt
results/: config.json  data_summary.json  metadata.json
results/evaluations/: analysis_summary.json  mt_bench_scores.jsonl  safety_scores.jsonl
results/model_outputs/: mt_bench_outputs.jsonl  safety_outputs.jsonl
src/: analyze_results.py  config.py  data_checks.py  log_env.py  run_experiments.py  score_outputs.py  utils.py
(+22 files in other folders)
