[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
  "pypdf",
  "datasets",
  "openai>=2.21.0",
  "pandas>=2.3.3",
  "numpy>=2.2.6",
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
  "scipy>=1.15.3",
  "tqdm>=4.67.3",
  "tenacity>=9.1.4",
  "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_workspace"]
